@@ -63,7 +63,9 @@ $smarty->display( 'html/lbheader.tpl' );
 
 $subBarContents = '<a href="view.php?useSessionFilter=true"><img src="icons/gohome.png" width="32" height="32" alt=""></a> &nbsp; &nbsp;
    <strong><img src="icons/email.png" width="16" height="16" alt="E-mail" /> E-Mail Options</strong> &nbsp; &nbsp; '.$developer->login;
-echo subBar( 'Options', $subBarContents );
+$smarty->assign( 'subBarType',     'Options' );
+$smarty->assign( 'subBarContents', $subBarContents );
+$smarty->display( 'html/lbsubbar.tpl' );
 
 $likeChecked    = (matchType($developer->types, "Like")    ? 'checked="checked"' : "");
 $dislikeChecked = (matchType($developer->types, "Dislike") ? 'checked="checked"' : "");
