@@ -7,6 +7,8 @@
  * The locale cell is now further away from the type cell on the settings
  page, "all other locales" is above all locales and there's a <hr/> dividing "all
  others" and the list of locales.
+ * Removed the subBar() function from functions.inc.php.
+ * Made the code in view.php a little more clear.
 
 2009-04-28 (dazjorz)
  * Fixed stats.php to make a list of all types, sorted by the order as
